--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,1 +1,18 @@
-#define HAVE_UNISTD_H @HAVE_UNISTD_H@
+#define LIBFRUGI_HAVE_UNISTD_H @HAVE_UNISTD_H@
+#define LIBFRUGI_HAVE_POSIX_CLOCK_MONOTONIC @HAVE_POSIX_CLOCK_MONOTONIC@
+#define LIBFRUGI_HAVE_POSIX_CLOCK_MONOTONIC_RAW @HAVE_POSIX_CLOCK_MONOTONIC_RAW@
+
+#define LIBFRUGI_SYSTEM_TIMER_BACKEND_MONOTONIC     1
+#define LIBFRUGI_SYSTEM_TIMER_BACKEND_MONOTONIC_RAW 2
+#define LIBFRUGI_SYSTEM_TIMER_BACKEND_WINDOWS       3
+
+#if defined(LIBFRUGI_HAVE_POSIX_CLOCK_MONOTONIC_RAW)
+#   define LIBFRUGI_SYSTEM_TIMER_BACKEND LIBFRUGI_SYSTEM_TIMER_BACKEND_MONOTONIC_RAW
+#elif defined(LIBFRUGI_HAVE_POSIX_CLOCK_MONOTONIC)
+#   define LIBFRUGI_SYSTEM_TIMER_BACKEND LIBFRUGI_SYSTEM_TIMER_BACKEND_MONOTONIC
+#elif _WIN32
+#   define LIBFRUGI_SYSTEM_TIMER_BACKEND LIBFRUGI_SYSTEM_TIMER_BACKEND_WINDOWS
+#else
+#   error
+#endif
+
